--- a/css/styles.css
+++ b/css/styles.css
@@ -796,6 +796,49 @@ letter-spacing: 0.03em;
 color: var(--secondary-text-color);
 } 
 
+/* backdrop */
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background-color:rgba(0, 0, 0, 0.2);
 
+}
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+}
 
+.modal{
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  background-color: #FFFFFF;
+  top:221px;
+  left: 50%;
+  transform: translate(-50%)
 
+}
+
+.close{
+  
+  display:flex;
+  width: 30px;
+  height: 30px;
+  justify-items: center;
+  align-items: center;
+  border-radius: 30px;
+  background-color: var(--white-color);
+  margin-top: 4px;
+  margin-left: 490px;
+
+ 
+ 
+}
+
+.close-img{
+  display: block;
+  background-size: contain;
+}
