--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,7 @@ align-items: center;
 display: flex;
 margin-left: 93px;
 }
+
 .site-nav .link{
 display: block;
 padding-top:32px;
@@ -218,17 +219,30 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 color: var(--primary-text-color);
 text-decoration: none;
+
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
+
 .site-nav .link:hover,
-.site-nav .link:focus{
+.site-nav .link:focus
+{
 color: var(--accent-color);
 }
+
+
 
 .site-nav .item + .item{
   margin-left: 50px;
 }
+
+
 .item{
   position: relative;
+  
+  
 }
 .link::after{
   position: absolute;
@@ -240,12 +254,17 @@ color: var(--accent-color);
   background-color: var(--accent-color);
   bottom: 0;
   left: 0;
-  opacity: 0;
+
+  opacity:0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover::after{
-opacity: 1;
+.link:hover::after
+{
+  opacity:1;
 }
+
+
 
 /* list-contacts */
 .list-contacts{
@@ -872,20 +891,27 @@ color: var(--secondary-text-color);
 .close{
   
   display:flex;
+  padding:0;
   width: 30px;
   height: 30px;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
-  border-radius: 30px;
+  border-radius: 45px;
   background-color: var(--white-color);
-  margin-top: 4px;
+  margin-top: 18px;
   margin-left: 490px;
-
- 
- 
 }
 
 .close-img{
   display: block;
-  background-size: contain;
+  background-size: cover;
+  object-fit: cover;
+  fill:var(--logo-color);
+}
+
+.close:hover{
+  background-color: var(--accent-color);
+}
+.close-img:hover{
+ fill: var(--white-color);
 }
