--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ display: flex;
 margin-left: 93px;
 }
 
-.site-nav .link{
+.link{
 display: block;
 padding-top:32px;
 padding-bottom:32px;
@@ -222,8 +222,6 @@ text-decoration: none;
 
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
 
 
 .site-nav .link:hover,
@@ -242,9 +240,9 @@ color: var(--accent-color);
 .item{
   position: relative;
   
-  
 }
-.link::after{
+
+.link:after{
   position: absolute;
   display: block;
   content: " ";
@@ -257,12 +255,16 @@ color: var(--accent-color);
 
   opacity:0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-.link:hover::after
-{
+
+.link:focus::after,
+.link:hover::after{
   opacity:1;
 }
+
+
 
 
 
