--- a/css/styles.css
+++ b/css/styles.css
@@ -255,16 +255,14 @@ color: var(--accent-color);
   bottom: 0;
   left: 0;
 
-  /* opacity:0; */
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity:0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  transform: scaleX(0);
 }
 
 
 .link:hover::after{
-  /* opacity:1; */
-  transform: scaleX(1);
+  opacity:1;
 }
 
 
@@ -827,13 +825,9 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /*   
   outline: 1px solid black; */
 
-
 }
 
-.examples-border:hover .examples-text-border{
-  
-  /* transform:translateY(0); */
-}
+
 
 .examples-border:hover .examples-overlay{
   transform:translateY(-100%);
