--- a/css/styles.css
+++ b/css/styles.css
@@ -255,13 +255,13 @@ color: var(--accent-color);
   bottom: 0;
   left: 0;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scaleX(100%);
 }
 
-/* .current:hover::after{
-  opacity:0;
-} */
+.current:hover::after{
+  transform: scaleX(0);
+}
 
 
 
