--- a/css/styles.css
+++ b/css/styles.css
@@ -256,11 +256,13 @@ color: var(--accent-color);
   left: 0;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: scaleX(100%);
+  transform: scaleX(1);
+  
 }
 
 .current:hover::after{
   transform: scaleX(0);
+  
 }
 
 
@@ -889,10 +891,14 @@ color: var(--secondary-text-color);
   width:100%;
   height: 100%;
   background-color:rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .backdrop.is-hidden{
   opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: none;
 }
 
